--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,39 @@
-.App {
-   margin: 0 auto;
-   width: 800px;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
+
+body {
+  background-color: #c7baae5e;
 }
 
-.buttons {
+
+.container {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  font-family: 'Dancing Script', cursive;
+}
+
+.main {
+  margin: 0 auto;
+  margin-top: 10%;
+   text-align: center;
+   font-size: 70px;
+   color: rgb(114, 114, 114);
+}
+
+.button {
+  font-size: 70px;
+  width: 70px;
+  
+}
+
+.content {
+  width: 70%;
+}
+
+.author {
+  text-align: right;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 40px;
 }
